# ChangeLog for net-analyzer/argus-clients
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/argus-clients/ChangeLog,v 1.27 2011/08/30 19:35:20 jer Exp $

*argus-clients-3.0.5.19 (30 Aug 2011)

  30 Aug 2011; Jeroen Roovers <jer@gentoo.org> +argus-clients-3.0.5.19.ebuild:
  Version bump.

*argus-clients-3.0.5.18 (01 Aug 2011)

  01 Aug 2011; Jeroen Roovers <jer@gentoo.org> +argus-clients-3.0.5.18.ebuild:
  Version bump.

*argus-clients-3.0.4.1-r2 (06 Jul 2011)

  06 Jul 2011; Jeroen Roovers <jer@gentoo.org>
  +argus-clients-3.0.4.1-r2.ebuild, -argus-clients-3.0.5.6.ebuild,
  -argus-clients-3.0.5.11.ebuild, -argus-clients-3.0.5.14.ebuild,
  argus-clients-3.0.5.16.ebuild:
  Respect CFLAGS (again, bug #369607).

*argus-clients-3.0.5.16 (06 Jul 2011)

  06 Jul 2011; Jeroen Roovers <jer@gentoo.org> +argus-clients-3.0.5.16.ebuild:
  Version bump.

*argus-clients-3.0.5.14 (17 Jun 2011)

  17 Jun 2011; Jeroen Roovers <jer@gentoo.org> +argus-clients-3.0.5.14.ebuild:
  Version bump.

  08 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
  argus-clients-3.0.4.1-r1.ebuild:
  Stable on amd64 wrt bug #369587

  04 Jun 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  argus-clients-3.0.4.1-r1.ebuild:
  x86 stable wrt bug #369587

  01 Jun 2011; Jeroen Roovers <jer@gentoo.org> argus-clients-3.0.4.1-r1.ebuild,
  argus-clients-3.0.5.6.ebuild, argus-clients-3.0.5.11.ebuild:
  Add missing sys-libs/ncurses dependency.

*argus-clients-3.0.5.11 (01 Jun 2011)

  01 Jun 2011; Jeroen Roovers <jer@gentoo.org> +argus-clients-3.0.5.11.ebuild:
  Version bump.

*argus-clients-3.0.4.1-r1 (01 Jun 2011)

  01 Jun 2011; Jeroen Roovers <jer@gentoo.org> -argus-clients-3.0.4.1.ebuild,
  +argus-clients-3.0.4.1-r1.ebuild:
  Install radium thanks to Martin Buerger (bug #352166).

*argus-clients-3.0.5.6 (19 Apr 2011)
*argus-clients-3.0.4.1 (19 Apr 2011)
