@@ -7,18 +7,20 @@ DIST argus-clients-3.0.4.1.tar.gz 2116531 RMD160 0c2d86765d97221c1cdd07df4b7303a
 DIST argus-clients-3.0.5.16.tar.gz 2167460 RMD160 2b3173824802f028cd0149df2cb895b721baf4e8 SHA1 a5a84bee339651bb70049aee5424d1593654ad02 SHA256 85c4a233def39ef95a5dec9610c1631d1d0b4744fe12921b53e01ec90f928bf6
 DIST argus-clients-3.0.5.18.tar.gz 2170965 RMD160 aec44e3c0308dda34868e3252c8c049f784edc57 SHA1 54f3260758d827f5f80e3b88a523881cf397aa02 SHA256 f396a03bbbbb5a02ad5abda800d6b326c3c274f12aee37ab900308b2ff948819
 DIST argus-clients-3.0.5.19.tar.gz 2174063 RMD160 071a804fa742d624a206852212a24463bf8334f9 SHA1 7105428904c715a56cca2b03f0ed5b6a4081e683 SHA256 91c7d2df3d78d9e1175f9e5e3c253e923d851aa98f08f35d64f6000b2ac74b9c
+DIST argus-clients-3.0.5.21.tar.gz 2173166 RMD160 9e6f431dfe27e063786decdb0169917d45c5c51e SHA1 2c6483003e073d59767b8832bf0f03a26493dcfd SHA256 5d1e6a544dbb76fa1ce019103914ed6a0e37e364e097510f76af2b4ae4046e85
 EBUILD argus-clients-3.0.3.8.ebuild 1338 RMD160 34fe568ba34680866d2c366bd1c599f42e8e57e2 SHA1 ccd0ef868eaf32146a5d9cf76f4d14dcedef02f7 SHA256 5399c5f22b75bc5333bbd7aa0afbb0637dd99ec102c1c632ca75ef94b2c043c3
 EBUILD argus-clients-3.0.4.1-r1.ebuild 1505 RMD160 1fde0a7cd7bd270254b7c62316022c4c52fd2054 SHA1 a668a020e2254bd44ba6af0cb7db369431706d55 SHA256 cb8271333be2cd71d706ebc6480e409b46cd519f915b65bf30c26f02e99423da
 EBUILD argus-clients-3.0.4.1-r2.ebuild 1408 RMD160 3d7d6b5d98ae60b4aca4450dd973dce781c0acea SHA1 e0c6ff431ec1e9f64dbc8a306cba3f2a1ffd7dee SHA256 99ff058956d495fb37d3019fa37713255a7dd9784674384d25f545494ea66d22
 EBUILD argus-clients-3.0.5.16.ebuild 1401 RMD160 d8c8a30408072bddc5c01101b95ebed463ff8c00 SHA1 250f778d0313a74c460198b665879ace65283195 SHA256 de8882598ef534e3cf4bc3337161506644dbf46cdae0fcada8adc976c2e0c6ea
 EBUILD argus-clients-3.0.5.18.ebuild 1401 RMD160 be781cf7195e1628f69d4e9e0d5bb2040b35fbfc SHA1 2da4743fd042817c6791702033d9422fbf02c5d2 SHA256 d87fc7bcaf71b31d60abd805472fb22d1b25c8fd469fe2879a515f06fbba178e
 EBUILD argus-clients-3.0.5.19.ebuild 1401 RMD160 83505ae8288a0cf32c156942601795bba7b011dc SHA1 58d49e843c8a210cd05ab0099699ff8370cc5ae4 SHA256 5fc9a3cae28b6fc360aedd183c1902e0d738c7914bc43c56f3e0a9195bf06ccc
-MISC ChangeLog 4599 RMD160 64021f88432c6e0eb53b4f1db13a8ce4b9f7b682 SHA1 01a5bbb3a86f30d929f0dac17c92e18e1c942679 SHA256 e514607f75a3b60135a61416a618cf91982b70df9c0c446156243101494b2fc0
+EBUILD argus-clients-3.0.5.21.ebuild 1401 RMD160 25fefc46987be149344b18bae5bb6fde621be2cc SHA1 5cbdb781874d63a89449331e0d9d4cac543c60cc SHA256 d109a65014a754324df5a0fb3c05f6adfd883bb739079dbb903dbc008225dbcf
+MISC ChangeLog 4734 RMD160 3b57405d53ebd77c622fc946389b2c30bf4b594e SHA1 4fd46762be3c6796dd315d77a2b9a9d0a9da6ff7 SHA256 a445e861cc3575e5ba1a8f6b0dd679590099c7a2e16bc753b5fc615903066e4d
 MISC metadata.xml 159 RMD160 28e799fe0fd02aaab9d4bbe5595f133101606f5b SHA1 9f5df3eabd621951a959cc8e0e2e0d352cd1fe1e SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk5dO34ACgkQVWmRsqeSphPRBQCfSTMnedEt/8xeKiAS4hTqFjhX
-sxIAnRcqLXiRYjzoNGX3zM2S3x3xH1Zo
-=OZo8
+iEYEARECAAYFAk6Sz8AACgkQVWmRsqeSphMUdACfX3uQkDLK3z7FIGg+y3qMu6JF
+pkIAmwWMqTFHmE9cebcwwSfs75szc/fc
+=QER4
 -----END PGP SIGNATURE-----
